<resources>
    <string name="action_skip">跳过</string>
    <string name="app_name">婚礼纪商家版</string>
    <string name="action_cancel">取消</string>
    <string name="action_ok">确定</string>
    <string name="action_back">返回</string>
    <string name="action_preview">预览</string>
    <string name="btn_send">发送</string>
    <string name="format_date">yyyy-MM-dd HH:mm:ss</string>
    <string name="format_date_type1">MM-dd HH:mm</string>
    <string name="format_date_type4">yyyy.MM.dd</string>
    <string name="format_date_type5">yyyy年MM月dd日 kk:mm</string>
    <string name="format_date_type6">yyyy年MM月</string>
    <string name="format_date_type8">yyyy-MM-dd</string>
    <string name="format_date_type10">yyyy-MM</string>
    <string name="format_date_type11">yyyy-MM-dd HH:mm</string>
    <string name="format_date_type12">MM月dd日</string>
    <string name="format_date_type13">HH:mm</string>
    <string name="format_date_type14">yyyy年MM月dd日 EE</string>
    <string name="face_001">[大笑]</string>
    <string name="face_002">[两眼放光]</string>
    <string name="face_003">[抠鼻]</string>
    <string name="face_004">[吐舌]</string>
    <string name="face_005">[委屈]</string>
    <string name="face_006">[微笑]</string>
    <string name="face_007">[吓]</string>
    <string name="face_008">[鄙视]</string>
    <string name="face_009">[闭嘴]</string>
    <string name="face_010">[不高兴]</string>
    <string name="face_011">[大哭]</string>
    <string name="face_012">[鼓掌]</string>
    <string name="face_013">[汗]</string>
    <string name="face_014">[酷]</string>
    <string name="face_015">[亲亲]</string>
    <string name="face_016">[生气]</string>
    <string name="face_017">[喜欢]</string>
    <string name="face_018">[晕]</string>
    <string name="face_019">[抓狂]</string>
    <string name="face_020">[打]</string>
    <string name="face_021">[哈欠]</string>
    <string name="face_022">[哼]</string>
    <string name="face_023">[撇嘴]</string>
    <string name="face_024">[睡觉]</string>
    <string name="face_025">[再见]</string>
    <string name="face_026">[坏笑]</string>
    <string name="face_027">[可怜]</string>
    <string name="face_028">[贱笑]</string>
    <string name="face_029">[疑问]</string>
    <string name="face_030">[无语]</string>
    <string name="face_031">[怒骂]</string>
    <string name="face_032">[困]</string>
    <string name="face_033">[口罩]</string>
    <string name="face_034">[赞]</string>
    <string name="face_035">[ok]</string>
    <string name="face_036">[耶]</string>
    <string name="hint_notice_collected_succeed">你可以在“我的”>“我的喜欢”界面下查看自己已喜欢的东西哦！</string>
    <string name="hint_notice_collected_succeed2">关注成功 ^_^！你可以在“小组”左上角头像中>“关注的话题”下查看自己已关注的话题哦！</string>
    <string name="hint_no_notification">暂无通知</string>
    <string name="hint_no_orders">暂无订单</string>
    <string name="label_confirm">确定</string>
    <string name="label_confirm_yes">是的</string>
    <string name="label_cancel">取消</string>
    <string name="label_message">消息</string>
    <string name="label_notification">通知</string>
    <string name="label_praise">赞</string>
    <string name="label_login">登录</string>
    <string name="label_quit">再按一次可以退出婚礼纪</string>
    <string name="label_contact">联系</string>
    <string name="label_order_time2">下单时间：</string>
    <string name="label_order_real_name">真实姓名</string>
    <string name="label_save">保存</string>
    <string name="msg_submitting">正在提交</string>
    <string name="msg_preparing">正在准备数据</string>
    <string name="msg_exit_after_change_host">已成功修改服务器地址!!!</string>
    <string name="settings_clear_cache">清除缓存</string>
    <string name="settings_about_us">关于婚礼纪商家版</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_chat">聊天</string>
    <string name="title_activity_comment_list">评分</string>
    <string name="title_activity_my_twitter">我的动态</string>
    <string name="no_more">-- The End --</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="menu_help">帮助</string>
    <string name="msg_error">错误</string>
    <string name="button_cancel">取消</string>
    <string name="button_ok">确定</string>
    <string name="net_disconnected">网络连接失败，请检查网络</string>
    <string name="nian">年</string>
    <string name="chineseNumber1">一</string>
    <string name="chineseNumber2">二</string>
    <string name="chineseNumber3">三</string>
    <string name="chineseNumber4">四</string>
    <string name="chineseNumber5">五</string>
    <string name="chineseNumber6">六</string>
    <string name="chineseNumber7">七</string>
    <string name="chineseNumber8">八</string>
    <string name="chineseNumber9">九</string>
    <string name="chineseNumber10">十</string>
    <string name="chineseNumber11">十一</string>
    <string name="chineseNumber12">十二</string>
    <string name="chineseTen0">初</string>
    <string name="chineseTen1">十</string>
    <string name="chineseTen2">廿</string>
    <string name="chineseTen3">三</string>
    <string name="chineseTen4">二</string>
    <string name="animals0">鼠</string>
    <string name="animals1">牛</string>
    <string name="animals2">虎</string>
    <string name="animals3">兔</string>
    <string name="animals4">龙</string>
    <string name="animals5">蛇</string>
    <string name="animals6">马</string>
    <string name="animals7">羊</string>
    <string name="animals8">猴</string>
    <string name="animals9">鸡</string>
    <string name="animals10">狗</string>
    <string name="animals11">猪</string>
    <string name="leap_month">闰</string>
    <string name="month">月</string>
    <string name="zheng">正</string>
    <string name="terms0">小寒</string>
    <string name="terms1">大寒</string>
    <string name="terms2">立春</string>
    <string name="terms3">雨水</string>
    <string name="terms4">惊蛰</string>
    <string name="terms5">春分</string>
    <string name="terms6">清明</string>
    <string name="terms7">谷雨</string>
    <string name="terms8">立夏</string>
    <string name="terms9">小满</string>
    <string name="terms10">芒种</string>
    <string name="terms11">夏至</string>
    <string name="terms12">小暑</string>
    <string name="terms13">大暑</string>
    <string name="terms14">立秋</string>
    <string name="terms15">处暑</string>
    <string name="terms16">白露</string>
    <string name="terms17">秋分</string>
    <string name="terms18">寒露</string>
    <string name="terms19">霜降</string>
    <string name="terms20">立冬</string>
    <string name="terms21">小雪</string>
    <string name="terms22">大雪</string>
    <string name="terms23">冬至</string>
    <string name="chunjie">春节</string>
    <string name="yuanxiao">元宵</string>
    <string name="duanwu">端午</string>
    <string name="zhongqiu">中秋</string>
    <string name="chongyang">重阳</string>
    <string name="laba">腊八</string>
    <string name="xiaonian">小年</string>
    <string name="chuxi">除夕</string>
    <string name="qixi">七夕</string>
    <string name="new_Year_day">元旦节</string>
    <string name="valentin_day">情人节</string>
    <string name="women_day">妇女节</string>
    <string name="arbor_day">植树节</string>
    <string name="labol_day">劳动节</string>
    <string name="youth_day">青年节</string>
    <string name="children_day">儿童节</string>
    <string name="army_day">建军节 </string>
    <string name="teacher_day">教师节</string>
    <string name="national_day">国庆节</string>
    <string name="christmas_day">圣诞节</string>
    <string name="title_activity_up_opus_manage">我发布的</string>
    <string name="title_activity_down_opus_manage">已下架的</string>
    <string name="label_up_opus">已上架</string>
    <string name="label_down_opus">已下架</string>
    <string name="rmb">¥</string>
    <string name="title_activity_work">套餐</string>
    <string name="label_pic_count">%1$s/%2$s</string>
    <string name="label_all_info">查看全部</string>
    <string name="label_buyer_reading">购买须知</string>
    <string name="label_buyer_reading2">温馨提示</string>
    <string name="label_work_info">套餐描述</string>
    <string name="label_comment_count2">%s条评论</string>
    <string name="label_work">套餐</string>
    <string name="label_case">案例</string>
    <string name="hint_no_works">暂时没有作品</string>
    <string name="hint_close_day_fail">关闭失败</string>
    <string name="hint_are_you_sure_to_delete">确认删除吗?</string>
    <string name="msg_failed_finish_order">提交失败,请稍后重试</string>
    <string name="label_accept_order">接单</string>
    <string name="label_accept_order2">同意接单</string>
    <string name="msg_auth_error">您的账号在其他地方登录\n \n请重新登录!</string>
    <string name="label_pay_discount1">可定金支付</string>
    <string name="label_pay_discount2">全额支付享优惠</string>
    <string name="propertie1">婚礼策划</string>
    <string name="propertie3">婚礼摄影</string>
    <string name="propertie4">婚礼摄像</string>
    <string name="propertie5">婚礼跟妆</string>
    <string name="propertie6">婚礼司仪</string>
    <string name="label_services">服务范围</string>
    <string name="label_price">¥%s</string>
    <string name="rating1">1星</string>
    <string name="rating2">2星</string>
    <string name="rating3">3星</string>
    <string name="rating4">4星</string>
    <string name="rating5">5星</string>
    <string name="label_comment_count4">%s人评价</string>
    <string name="label_type">类型</string>
    <string name="title_activity_about">关于婚礼纪</string>
    <string name="label_version">版本：</string>
    <string name="label_weibo">新浪微博：@婚礼纪</string>
    <string name="label_qweibo">腾讯微博：@marry_memo</string>
    <string name="label_weixinhao">微信号：hunliji_shangjia</string>
    <string name="label_slogan">打造完美婚礼，谱写婚礼故事</string>
    <string name="label_weibo2">微博</string>
    <string name="hint_service_items_title">是否包含以下服务</string>
    <string name="title_activity_snapshot">套餐快照</string>
    <string name="hint_thread_image">[图片]</string>
    <string name="hint_new_number_error">请填写正确的手机号码</string>
    <string name="label_order_price2">实付金额：</string>
    <string name="label_detele_msg">你确定删除与对方的聊天记录?</string>
    <string name="msg_channel_delete_error">删除失败</string>
    <string name="colon">:</string>
    <string name="action_copy">复制</string>
    <string name="hint_post_copy">已成功复制回帖内容到粘贴板</string>
    <string name="title_activity_home">婚礼纪-商家版</string>
    <string name="label_home">首页</string>
    <string name="label_setting">设置</string>
    <string name="label_case_manage">案例管理</string>
    <string name="label_work_manage">套餐管理</string>
    <string name="label_comment_manage">评价管理</string>
    <string name="label_shop_manage">店铺管理</string>
    <string name="label_order_manage">订单管理</string>
    <string name="label_customer_manage">客资管理</string>
    <string name="label_income_manage">收入管理</string>
    <string name="label_channels">访问量</string>
    <string name="net_disconnected_load">点击屏幕加载试试吧</string>
    <string name="action_album">相册</string>
    <string name="action_camera_photo">拍照</string>
    <string name="label_add">添加</string>
    <string name="label_next">下一步</string>
    <string name="select_photo_title1">上传身份证正面</string>
    <string name="label_price2">%s元</string>
    <string name="label_advh_count">%s次推荐</string>
    <string name="label_discount">%s折</string>
    <string name="label_advh_total_count" formatted="false">送%s个,总计%s个</string>
    <string name="label_actual_price2">现价</string>
    <string name="label_merchant_pro_pay">商家服务（一年）</string>
    <string name="label_time_discount">限时特惠%d折</string>
    <string name="label_original_price2">原价 ¥ %s</string>
    <string name="label_bd_name">推荐人姓名</string>
    <string name="label_pro_pay_hint">提交即表示同意</string>
    <string name="label_pro_pay_agreement">《婚礼纪商家合作升级协议》</string>
    <string name="btn_pro_pay">确认并支付</string>
    <string name="label_select_merchant_type">选择商家类型</string>
    <string name="hint_select_merchant_type_tip">注册后无法修改，请谨慎选择</string>
    <string name="label_merchant_service">本地婚礼服务</string>
    <string name="label_merchant_service_tip">提供婚礼策划、婚纱摄影、摄影师、摄像机、化妆师、主持人、婚纱礼服、婚宴酒店、婚戒首饰、花艺甜品等服务</string>
    <string name="label_merchant_product">婚品电商</string>
    <string name="label_merchant_product_tip">可发布婚礼商品，包括但不限于：婚纱、礼服、婚鞋、配饰、首饰、婚庆用品、家居礼品等</string>
</resources>