<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/empty_hint_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:paddingBottom="16dp"
    android:visibility="gone">

    <ImageView
        android:id="@+id/img_empty_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/icon_empty_common"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/img_net_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/icon_no_network"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_empty_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/net_disconnected"
        android:textColor="@color/colorGray2"
        android:gravity="center"
        android:textSize="@dimen/ex_medium_text_size"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_empty2_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/net_disconnected_load"
        android:gravity="center"
        android:textColor="@color/colorGray3"
        android:textSize="@dimen/medium_text_size2"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_empty_hint"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/sl_r3_primary_2_dark"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/label_add"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/ex_medium_text_size"
        android:visibility="gone" />
</LinearLayout>
