<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/sl_color_white_2_background2"
        android:gravity="center"
        android:text="@string/select_photo_title1"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/medium_text_size1" />

    <include layout="@layout/line_layout" />

    <ImageView
        android:id="@+id/current_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorImageBackground"
        android:scaleType="centerCrop" />

    <View
        android:id="@+id/current_photo_line"
        style="@style/line_horizontal" />

    <Button
        android:id="@+id/action_camera_photo"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/sl_color_white_2_background2"
        android:text="@string/action_camera_photo"
        android:textColor="@color/colorBlack3"
        android:textSize="@dimen/ex_medium_text_size" />

    <include layout="@layout/line_layout" />

    <Button
        android:id="@+id/action_gallery"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/sl_color_white_2_background2"
        android:text="@string/action_album"
        android:textColor="@color/colorBlack3"
        android:textSize="@dimen/ex_medium_text_size" />

    <include layout="@layout/line_layout" />

    <Button
        android:id="@+id/action_cancel"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/sl_color_white_2_background2"
        android:text="@string/action_cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/ex_medium_text_size" />
</LinearLayout>