<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/label_select_merchant_type"
        android:textColor="@color/colorBlack2"
        android:textSize="@dimen/huge_text_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/hint_select_merchant_type_tip"
        android:textColor="@color/colorBlack2"
        android:textSize="@dimen/medium_text_size3" />


    <RelativeLayout
        android:id="@+id/merchant_service_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/sp_r4_solid_white_shadow_dddddd">

        <com.makeramen.rounded.RoundedImageView
            android:id="@+id/img_merchant_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"
            app:corner_radius="4dp"
            app:round_disabled="right"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_toRightOf="@+id/img_merchant_service"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_merchant_service"
                android:textColor="@color/colorBlack2"
                android:textSize="@dimen/ex_medium_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/label_merchant_service_tip"
                android:textColor="@color/colorBlack2"
                android:textSize="@dimen/medium_text_size3" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:button="@drawable/sl_ic_check_mark"
            android:clickable="false" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/merchant_work_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/sp_r4_solid_white_shadow_dddddd">

        <com.makeramen.rounded.RoundedImageView
            android:id="@+id/img_merchant_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/app_name"
            app:round_disabled="right"
            app:corner_radius="4dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_toRightOf="@+id/img_merchant_product"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_merchant_product"
                android:textColor="@color/colorBlack2"
                android:textSize="@dimen/ex_medium_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/label_merchant_product_tip"
                android:textColor="@color/colorBlack2"
                android:textSize="@dimen/medium_text_size3" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:button="@drawable/icon_check_round_50_50_normal"
            android:clickable="false" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/sl_r4_primary_2_dark"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/label_next"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/medium_text_size1" />
</LinearLayout>
